# sdl2-python-example

./: .gitignore  CMakeLists.txt  README.md  modding_notes.md  python_demo.py  python_strategy_demo.py
include/: hexlib.h
src/: hexlib.c  main.c
